tests/tooling/fixtures/native/recovery/negative/negative_for_step_parser_malformed_shift_assign_tokenization.objc3
// Expected diagnostic code(s): O3P103, O3P100.
module NegativeForStepParserMalformedShiftAssignTokenization;

fn main() -> i32 {
  for (let i = 1; i < 16; i << = 1) {
    let keep = i;
  }
  return 0;
}
